<resources>
    <string name="app_name">Baking App</string>
    <string name="select_receipe_title">Baking App (Select A Recipe)</string>
    <string name="receipe_detail_title">Baking App (Receipe Detail)</string>
    <string name="receipe_step_detail_title">Baking App (Recipe Step Detail)</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ingredient_widget_configuration">IngredientWidgetConfiguration
    </string>
</resources>
